--- a/miembros.html
+++ b/miembros.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
         <a href="index.html">Inicio</a>
-        <a href="login.html">Cerrar sesión (simulado)</a>
+        <a href="login.html">Cerrar sesión</a>
     </nav>
 </header>
 
@@ -81,3 +81,4 @@
 </footer>
 </body>
 </html>
+
