Refactor panel_trabajador.html footer and structure
Updated footer text and improved HTML structure.

--- a/panel_trabajador.html
+++ b/panel_trabajador.html
@@ -94,7 +94,7 @@
 
 <footer>
     <p>WORKING &copy; 2025</p>
-    <p>Panel de trabajador simulado para proyecto escolar.</p>
+    <p>Panel de trabajador.</p>
 </footer>
 
 <script>
@@ -124,3 +124,4 @@ document.getElementById('archivos').addEventListener('change', function() {
 </script>
 </body>
 </html>
+
